# Jupyter

./: .gitignore  CNAME  Fama_French.ipynb  README.md  Run.bat  User_Inputs.txt  ai.ipynb  ai.py  all_historical_data.csv  app.py  arviz_pairplot.py  backtest.ipynb  bokeh-app.ipynb  cafef_downloader.py  clean.txt  combined_close_prices.csv  deseasonalized_revenue.csv  dividends.ipynb  fundamentals_plotly.ipynb  market-neutral.ipynb  market_neutral_returns.xlsx  prd.md  production.ipynb  pyproject.toml  report.xlsx  requirements.txt  reseasonalized_revenue.csv  seasonal_decomp.ipynb  studies.ipynb  studies.md  studies.py  valuation.ipynb
data/: FamaFrench3FACTOR.csv  FamaFrench5FACTOR.csv  revenue_data.csv
docs/: thinh-vu-vnstock.txt
outputs/: hrp_weights.json  report.xlsx  sector_map.csv  sector_map.json
