[project]
name = "vietnamese-stock-portfolio-optimization"
version = "0.1.0"
description = "Portfolio optimization tools for Vietnamese stocks"
readme = "README.md"
requires-python = "==3.10.11"
license = "MIT"
dependencies = [
    "pyportfolioopt==1.5.6",
    "tenacity==9.1.2",
    "pyfolio-reloaded==0.9.8",
    "vnstock==3.2.2",
    "ipykernel==6.29.5",
    "ipython==8.36.0",
    "ipywidgets==8.1.6",
    "numpy==2.2.5",
    "riskfolio-lib==7.0.0",
    "quantstats==0.0.64",
    "statsmodels==0.14.4",
    "tvdatafeed @ git+https://github.com/rongardF/tvdatafeed.git@e6f6aaa7de439ac6e454d9b26d2760ded8dc4923",
    "tradingview-ta==3.3.0",
    "nbformat>=5.10.4",
    "kaleido==0.2.1",
    "bokeh==3.7.2",
    "voila==0.5.8",
    "jupyter-ai==2.31.4",
    "langchain==0.3.25",
    "langchain-openai==0.3.16",
    "ta-lib==0.6.3",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
    "mypy",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {}}

[tool.uv]
# Specific uv settings
pip = { break-system-packages = true }

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Git dependencies specifically for uv
[tool.uv.sources.vnquant]
url = "https://github.com/phamdinhkhanh/vnquant.git"
